fix add to cart button on mobile devices

--- a/store/static/store/css/tetris_styles.css
+++ b/store/static/store/css/tetris_styles.css
@@ -201,4 +201,7 @@ a:hover {
   .shop-tetris-text {
     font-size: 1em;
   }
+  #product-footer{
+    display: block !important;
+  }
 }
